--- a/Landing/templates/Landing/base.html
+++ b/Landing/templates/Landing/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <!-- font awesome css -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" >
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
     <!-- Optional theme -->
@@ -16,6 +16,9 @@
 
     <!-- Css for navbar -->
     <link href="/static/css/navbar.css" rel="stylesheet">
+
+    <!-- Css for footer -->
+    <link href="/static/css/footer.css" rel="stylesheet">
 </head>
 
 <body>
@@ -70,11 +73,61 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+    {% block content %} {% endblock %}
 
+    <footer id="myFooter">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h5>Get started</h5>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Downloads</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>About us</h5>
+                    <ul>
+                        <li><a href="#">Company Information</a></li>
+                        <li><a href="#">Contact us</a></li>
+                        <li><a href="#">Reviews</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Support</h5>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Help desk</a></li>
+                        <li><a href="#">Forums</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Legal</h5>
+                    <ul>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Terms of Use</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Here we use the Google Embed API to show Google Maps. -->
+            <!-- In order for this to work in your project you will need to generate a unique API key.  -->
+            <iframe id="map-container" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJKf2yX368fRcRRoAp4-Zg2dI&key=AIzaSyB_JVg0qjCCKuinVJTj60Z4pS0u-c0-4jE "></iframe>
+        </div>
+        <div class="social-networks ">
+            <a href="# " class="twitter "><i class="fa fa-twitter "></i></a>
+            <a href="# " class="facebook "><i class="fa fa-facebook "></i></a>
+            <a href="# " class="google "><i class="fa fa-google-plus "></i></a>
+        </div>
+        <div class="footer-copyright ">
+            <p>© 2016 Copyright Text </p>
+        </div>
+    </footer>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js "></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js "></script>
+
 </body>
 
 </html>
