Added first image to static folder

--- a/Landing/templates/Landing/index.html
+++ b/Landing/templates/Landing/index.html
@@ -1,5 +1,7 @@
 {% extends "Landing/base.html" %} {% block content %}
 
-<h2>I wonder </h2>
+<h1>This is where the image for the parallax scrolling shall be placed</h1>
+
+<img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png;" alt="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png;">
 
 {% endblock %}
