--- a/Landing/templates/Landing/base.html
+++ b/Landing/templates/Landing/base.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
     <!-- Css for navbar -->
     <link href="/static/css/navbar.css" rel="stylesheet">
 
     <!-- Css for footer -->
     <link href="/static/css/footer.css" rel="stylesheet">
+
+    <!-- Css for parallax effect -->
+    <link href="/static/css/parallax.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,19 +27,21 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-                <a class="navbar-brand" href="#">Login dropdown</a>
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                <a class="navbar-brand" href="#">Ministry of ICT</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Innovation</a></li>
+                    <li><a href="#">Submission</a></li>
+                    
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
@@ -73,6 +75,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
     {% block content %} {% endblock %}
 
     <footer id="myFooter">
@@ -118,7 +121,6 @@
         <div class="social-networks ">
             <a href="# " class="twitter "><i class="fa fa-twitter "></i></a>
             <a href="# " class="facebook "><i class="fa fa-facebook "></i></a>
-            <a href="# " class="google "><i class="fa fa-google-plus "></i></a>
         </div>
         <div class="footer-copyright ">
             <p>© 2016 Copyright Text </p>
