--- a/Landing/templates/Landing/index.html
+++ b/Landing/templates/Landing/index.html
@@ -1,7 +1,10 @@
 {% extends "Landing/base.html" %} {% block content %}
 
-<h1>This is where the image for the parallax scrolling shall be placed</h1>
+<div class="parallax"></div>
 
-<img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png;" alt="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png;">
+<div class="brief">
+    Scroll Up and Down this page to see the parallax scrolling effect. This div is just here to enable scrolling. Tip: Try to
+    remove the background-attachment property to remove the scrolling effect.
+</div>
 
 {% endblock %}
