--- a/Landing/templates/Landing/base.html
+++ b/Landing/templates/Landing/base.html
@@ -32,13 +32,13 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                <a class="navbar-brand" href="#">Ministry of ICT</a>
+                <a class="navbar-brand" href="{% url 'index' %}">Ministry of ICT</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="{% url 'about' %}">About Us</a></li>
                     <li><a href="#">Innovation</a></li>
                     <li><a href="#">Submission</a></li>
                     
