--- a/Landing/templates/Landing/index.html
+++ b/Landing/templates/Landing/index.html
@@ -1,6 +1,32 @@
 {% extends "Landing/base.html" %} {% block content %}
 
-<div class="parallax"></div>
+<div class="parallax">
+
+    <h1 style="color: #F79131;
+    font: bold 100px/100px Helvetica, Sans-Serif;
+    padding: 10px;
+    letter-spacing: -1px;
+    text-align: center; 
+    /* padding: 10px; */
+    position: absolute; 
+    top: 250px; 
+    left: 20; 
+    width: 100%;
+    margin: 0 auto;">ICT </h1>
+
+    <h1 style="color: rgb(238, 255, 0);
+    font: bold 120px/120px Helvetica, Sans-Serif;
+    padding: 10px;
+    letter-spacing: -1px;
+    text-align: center; 
+    /* padding: 10px; */
+    position: absolute; 
+    top: 400px; 
+    left: 20; 
+    width: 100%;
+    margin: 0 auto;">Innovation Portal</h1>
+</div>
+
 
 <div class="brief">
     Scroll Up and Down this page to see the parallax scrolling effect. This div is just here to enable scrolling. Tip: Try to
