--- a/Landing/templates/Landing/submission.html
+++ b/Landing/templates/Landing/submission.html
@@ -28,7 +28,7 @@
 
         <!-- Left and right controls -->
         <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="fa fa-arrow-left"></span>
+        <span class="glyphicon glyphicon-chevron-left"></span>
         <span class="sr-only">Previous</span>
       </a>
         <a class="right carousel-control" href="#myCarousel" data-slide="next">
