--- a/Landing/templates/Landing/base.html
+++ b/Landing/templates/Landing/base.html
@@ -40,7 +40,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'about' %}">About Us</a></li>
                     <li><a href="#">Innovation</a></li>
-                    <li><a href="{% url 'submission' %}">Submission</a></li>
+                    <li><a href="{% url 'submit' %}">Submission</a></li>
                     
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
