--- a/Landing/templates/Landing/submit.html
+++ b/Landing/templates/Landing/submit.html
@@ -1,6 +1,8 @@
 {% extends "Landing/base.html" %} {% block content %}
 <h1>New post</h1>
-<form method="POST" class="post-form">{% csrf_token %} {{ form.as_p }}
-    <button type="submit" class="save btn btn-default">Save</button>
+<form role="form" action="" method="POST">
+    {% csrf_token %} 
+    {{ form.as_p }}
+    <button type="submit">Save</button>
 </form>
 {% endblock %}
