Checkpoint Independence day 9:35am

--- a/Landing/templates/Landing/base.html
+++ b/Landing/templates/Landing/base.html
@@ -38,9 +38,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'about' %}">About Us</a></li>
+                    <li><a href="#">About Us</a></li>
                     <li><a href="#">Innovation</a></li>
-                    <li><a href="{% url 'submit' %}">Submission</a></li>
+                    <li><a href="#">Submission</a></li>
                     
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
