--- a/Landing/templates/Landing/index.html
+++ b/Landing/templates/Landing/index.html
@@ -29,8 +29,15 @@
 
 
 <div class="brief">
-    Scroll Up and Down this page to see the parallax scrolling effect. This div is just here to enable scrolling. Tip: Try to
-    remove the background-attachment property to remove the scrolling effect.
+    <p>Welcome to the ICT innovation portal.
+        <br>The purpose of which is to collect and and all innovation details in our bid to 
+        promote ICT innovation within the country as well as eliminating the staggering unemployment
+        rates amongst the youth who are the largest population in the country right now. (<b>77% under 30 years of age</b>) 
+        <br>Orinigally geared at the youth, this programme is open to all Ugandans. 
+        <br>So feel free to submit your
+        details and our team shall be back to you shortly.
+    </p>
+
 </div>
 
 {% endblock %}
