--- a/Landing/templates/Landing/test.html
+++ b/Landing/templates/Landing/test.html
@@ -2,7 +2,7 @@
 <h1>New post</h1>
 <form role="form" action="" method="POST">
     {% csrf_token %} 
-    {{ form.as_p }}
+    {% crispy form %}
     <button type="submit">Save</button>
 </form>
 {% endblock %}
