--- a/Landing/templates/Landing/submission.html
+++ b/Landing/templates/Landing/submission.html
@@ -1,14 +1,11 @@
-{% extends "Landing/base.html" %} 
-{% load crispy_forms_tags %}
-
-{% block content %}
+{% extends "Landing/base.html" %} {% load crispy_forms_tags %} {% block content %}
 
 <div class="container">
-    
+
     <div class="row">
-        
-            {% crispy form%}
-        
+
+        {% crispy form%}
+
     </div>
 </div>
 {% endblock %}
