--- a/Landing/templates/Landing/submission.html
+++ b/Landing/templates/Landing/submission.html
@@ -1,11 +1,11 @@
 {% extends "Landing/base.html" %} {% load crispy_forms_tags %} {% block content %}
 
-<div class="container">
+<!-- <div class="container">
 
-    <div class="row">
+    <div class="row"> -->
 
         {% crispy form%}
 
-    </div>
-</div>
+    <!-- </div>
+</div> -->
 {% endblock %}
