Implemented submit buttons and tab switcher

--- a/Landing/templates/Landing/base.html
+++ b/Landing/templates/Landing/base.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
-    {% load static %}
-    {% load crispy_forms_tags %}
+    {% load static %} {% load crispy_forms_tags %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Innovation Portal</title>
-    <link rel="shortcut icon" type="image/png" href="../../static/favicon/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="../../static/favicon/favicon.ico" />
     <!-- font awesome css -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -43,7 +42,7 @@
                     <li><a href="{% url 'about' %}">About Us</a></li>
                     <li><a href="#">Innovation</a></li>
                     <li><a href="{% url 'submission' %}">Submission</a></li>
-                    
+
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
@@ -132,6 +131,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js "></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js "></script>
 
+    <!--Script for switching -->
+    <script src="/static/js/tabs.js"></script>
 </body>
 
 </html>
