--- a/Landing/templates/Landing/submission.html
+++ b/Landing/templates/Landing/submission.html
@@ -189,6 +189,10 @@
                 // inline: true,
                 // sideBySide: true,
             });
+            $('#datetimepicker12').datetimepicker({
+                // inline: true,
+                // sideBySide: true,
+            });
         });
     </script>
 
